Bug 471325 - Focus ring on native-styled tab is cut off at right, r=dao
UltraBlame original commit: 3615bdf56262f027c317301a78594d0fa08468f4

--- a/toolkit/themes/pinstripe/global/tabbox.css
+++ b/toolkit/themes/pinstripe/global/tabbox.css
@@ -316,6 +316,28 @@ tab
 }
 tab
 :
+focus
+{
+/
+*
+Tab
+focus
+rings
+need
+to
+overlay
+adjacent
+tabs
+.
+*
+/
+position
+:
+relative
+;
+}
+tab
+:
 first
 -
 of
